[project]
name = "a-stock1"
version = "0.1.0"
description = "A LangGraph-based Chinese A-share stock analysis agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.17.99",
    "akshare-proxy-patch>=0.4.2",
    "baostock>=0.9.2",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "mplfinance>=0.12.10b0",
    "pandas>=2.3.3",
    "plotly>=5.18.0",
    "prophet>=1.2.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "ta>=0.11.0",
    "tavily-python>=0.7.17",
    "zhipuai>=2.1.5.20250825",
]
